Finalizado main html

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio</title>
-</head>
-<body>
-    <h1>HELLO WORLD!</h1>
-</body>
+  </head>
+  <body>
+    <header></header>
+
+    <section class="bg-black">
+      <div class="" style="text-align: end; margin-right: 1rem">
+        <img src="/image/br.png" class="btnImg" style="width: 2.5%" alt="" />
+
+        <img
+          src="/image/us.png"
+          class="ms-2 btnImg"
+          style="width: 2.5%"
+          alt=""
+        />
+      </div>
+
+      <div class="">
+        <h1 class="text-center pt-5 pb-5 typing fontPixel">Hello World!</h1>
+        <div>
+          <img
+            src="https://avatars.githubusercontent.com/u/100373893?v=4"
+            class="img-fluid border-round m-auto img-animada w-15"
+            alt=""
+          />
+        </div>
+
+        <h3 class="text-center fontPixel pt-5">Técnologias mais usadas</h3>
+
+        <div class="img-row pt-5">
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/d21012299f2ccd4a7d73b13f896b0be91c9e71bb7f0b51f1cbfb783ed6b9f9b1/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6e6f64656a732f6e6f64656a732d6f726967696e616c2e737667"
+            alt="Node.js logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/.NET_Core_Logo.svg/1200px-.NET_Core_Logo.svg.png"
+            alt="Node.js logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/426c1121b29abc64a6b1af1e3aa3091abb38e39c87054720b765af1425c74e7f/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6a6176617363726970742f6a6176617363726970742d6f726967696e616c2e737667"
+            alt="JS logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/a07203131922e3fa0d6d0cd787edb5597771b30d712574bbc70a3c7aaa0161ea/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f747970657363726970742f747970657363726970742d6f726967696e616c2e737667"
+            alt="TS Logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/8b690f4dff81513c7425f3b8f6e66b34a1dea43e22562037eeb5449d18571c89/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6d7973716c2f6d7973716c2d6f726967696e616c2e737667"
+            alt="MySQL logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/90700a62313a7ab044939bb96a71304f22a7e179cc503cd565b2e793e4f492c0/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6d6f6e676f64622f6d6f6e676f64622d6f726967696e616c2e737667"
+            alt="MongoDB logo"
+          />
+          <img
+            class="img-fluid w-10 ms-5"
+            style="display: inline-block"
+            src="https://camo.githubusercontent.com/15166a15835f145259844be455ab5945594a70c48a3090aa83d193bd5e3e9bc5/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6769742f6769742d6f726967696e616c2e737667"
+            alt="git logo"
+          />
+        </div>
+      </div>
+      <div style="text-align: center; margin-top: 2rem">
+        <a href="">
+          <i class="bi bi-arrow-down-circle" style="font-size: 2rem"></i>
+        </a>
+      </div>
+    </section>
+
+    <section>
+      <div class="bg-white"></div>
+    </section>
+  </body>
+  <script src="/js/script.js"></script>
 </html>
