Media queries e repositorios

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -30,7 +30,7 @@
         <div>
           <img
             src="https://avatars.githubusercontent.com/u/100373893?v=4"
-            class="img-fluid border-round m-auto img-animada w-15"
+            class="img-fluid border-round m-auto img-animada w-15 img-q"
             alt=""
           />
         </div>
@@ -39,7 +39,7 @@
 
         <div class="img-row pt-5">
           <img
-            class="img-fluid w-10 ms-5"
+            class="img-fluid w-10 ms-5 logos"
             style="display: inline-block"
             src="https://camo.githubusercontent.com/d21012299f2ccd4a7d73b13f896b0be91c9e71bb7f0b51f1cbfb783ed6b9f9b1/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f6e6f64656a732f6e6f64656a732d6f726967696e616c2e737667"
             alt="Node.js logo"
@@ -83,15 +83,27 @@
         </div>
       </div>
       <div style="text-align: center; margin-top: 2rem">
-        <a href="">
+        <a href="#repos">
           <i class="bi bi-arrow-down-circle" style="font-size: 2rem"></i>
         </a>
       </div>
     </section>
 
     <section>
-      <div class="bg-white"></div>
+      <div class="bg-white border-black m-5">
+        <div></div>
+        <h2 class="text-center fontPixel pt-2">PROJETOS</h2>
+        <div id="repos" >
+
+        </div>
+      </div>
     </section>
+
+    <footer>
+      <div>
+
+      </div>
+    </footer>
   </body>
   <script src="/js/script.js"></script>
 </html>
