Finalizado sobre e repo

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,7 +11,6 @@
     <title>Portifólio</title>
   </head>
   <body>
-    <header></header>
 
     <section class="bg-black">
       <div class="" style="text-align: end; margin-right: 1rem">
@@ -83,26 +82,40 @@
         </div>
       </div>
       <div style="text-align: center; margin-top: 2rem">
-        <a href="#repos">
+        <a href="#sobrePort">
           <i class="bi bi-arrow-down-circle" style="font-size: 2rem"></i>
         </a>
       </div>
     </section>
 
-    <section>
-      <div class="bg-white border-black m-5">
-        <div></div>
-        <h2 class="text-center fontPixel pt-2">PROJETOS</h2>
-        <div id="repos" >
-
+    <div id="sobrePort">
+      <section class="bg-white25">
+        <div class="m-5">
+          <article class="">
+            <h2 class="text-center fontPixel pt-2 border-baixo">SOBRE MIM</h2>
+            <p class="pBio">
+              Meu nome é Lucas, atualmente possuo 23 anos e sou estudante da
+              área da ciência da computação. Sou apaixonado por tecnologia e
+              estou sempre em busca de aprender novas ferramentas e tecnologias.
+              Estou sempre em busca de novos desafios e oportunidades para
+              aprender e crescer como desenvolvedor. Meus hobbies incluem jogar
+              video game, assistir filmes e séries, e ler livros, em especial
+              mangás e quadrinhos.
+            </p>
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
+
+      <section class="bg-white75">
+        <div class="m-5">
+          <h2 class="text-center fontPixel pt-2 border-baixo">PROJETOS</h2>
+          <div id="repos"></div>
+        </div>
+      </section>
+    </div>
 
     <footer>
-      <div>
-
-      </div>
+      <div></div>
     </footer>
   </body>
   <script src="/js/script.js"></script>
